feat: add router to optionsPage

--- a/src/options/index.html
+++ b/src/options/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <base target="_blank">
   <title>Options</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
+
+    html {
+      background-color: black;
+    }
+  </style>
 </head>
-<body>
+
+<body class="dark">
   <div id="app"></div>
   <script type="module" src="./main.ts"></script>
 </body>
+
 </html>
